<resources>


    <string name="changelog_message">
        <!--Updates:\n-->
        <!--☑ Added when the wallpaper was uploaded\n-->
        <!--☑ Improved "view comments" window significantly \n-->
        <!--☑ We have switched to more optimized resolution for wallpaper preview, so app will now use less data than before \n-->
        <!--☑ Several UI tweaks\n-->
        <!--\n-->
        ☑ Stability update to resolve random crashes on newer versions of Android.\n\n\n
        IMPORTANT!!
        \n\nDue to Android 10 security changes the directory in which wallpapers download has been changed to /Android/data/com.droidheat.amoledbackgrounds/files/Pictures/.
        \n\nIf you ever uninstall the app, Android will also delete the wallpapers. To prevent deletion, please move the wallpapers manually to a safe location.
        \n\nFor Android 9 users or below you still have wallpapers in AmoledBackgrounds folder (old location) but new wallpapers will be downloaded to updated location mentioned earlier.
        \n\nThank you for understanding!
        <!--\n-->
        <!--Don\'t forget to rate us 5⭐ on play store!-->
    </string>


    <string name="app_name">AmoledBackgrounds</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="options_array">
        <item>Hot</item>
        <item>New</item>
        <item>Top 24h</item>
        <item>Top Week</item>
        <item>Top Month</item>
        <item>Top Year</item>
        <item>Top All</item>
    </string-array>
    <string-array name="set_auto_sort_array">
        <item>Hot</item>
        <item>Top 24h</item>
        <item>Top Week</item>
    </string-array>

    <string name="title_activity_download">DownloadActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fullscreen_preview">fullscreen preview</string>
    <string name="reddit">reddit</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="search">Search</string>
    <string name="thread">thread</string>

    <string name="changelog">Changelog</string>
    <string name="r_amoledbackgrounds">r/AmoledBackgrounds</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=com.droidheat.amoledbackgrounds</string>
    <string name="preference_file_key">key1</string>
    <string name="share">Share with Friends</string>
    <string name="rate_our_app_5">Rate Our App 5⭐</string>
    <string name="daily_wallpaper_dialog_instructions">This feature runs daily at same time you enable this setting. It is under full testing for reliability. Please choose your preferred sort for daily wallpaper -</string>
    <string name="automatic_wallpaper">Daily Wallpaper</string>
    <string name="settings">Settings</string>
    <string name="downloads">Downloads</string>
</resources>
